--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
+ "dependencies": {
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "lucide-react": "^0.556.0"
+    "lucide-react": "^0.556.0",
+    "react-router-dom": "^6.28.0"
+  },
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
